@@ -1,4 +1,4 @@
-/* $Id: cmd.c,v 1.33 2007-12-06 09:46:22 nicm Exp $ */
+/* $Id: cmd.c,v 1.34 2008-06-01 20:20:25 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -47,6 +47,7 @@ const struct cmd_entry *cmd_table[] = {
 	&cmd_rename_window_entry,
 	&cmd_scroll_mode_entry,
 	&cmd_select_window_entry,
+	&cmd_send_keys_entry,
 	&cmd_send_prefix_entry,
 	&cmd_set_option_entry,
 	&cmd_swap_window_entry,
