@@ -1,3 +1,7 @@
+01 June 2008
+
+* New command, send-keys, will send a set of keys to a window.
+
 31 May 2008
 
 * Fix so tmux doesn't hang if the initial window fails for some reason. This
@@ -310,4 +314,4 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.94 2008-05-31 20:04:15 nicm Exp $
+$Id: CHANGES,v 1.95 2008-06-01 20:20:25 nicm Exp $
